--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           
 
         </div>
-        <div class="slide"><a href="article1.html"> <div class="startsidav70"> <img class="startsidav70" src="BILDER/m2fram.png"> </a> <br>BMW M2<br><br><br>Price 400 000 kr</div></div>
+        <div class="slide"><a href="article1.html"> <div class="startsidav70"> <img class="startsidav70" src="bilder/m2fram.png"> </a> <br>BMW M2<br><br><br>Price 400 000 kr</div></div>
         
         <div class="slide"><a href="article7.html"> <div class="startsidav70"> <img class="startsidav70" src="bilder/v70r2.png"> </a> <br>Volvo V70R<br><br><br>Price 120 000 kr</div></div>
 
