--- a/article10.html
+++ b/article10.html
@@ -40,26 +40,17 @@
             <div class="title"> Car</div>
 
 
-<div class="beskrivning">Letar du efter en klassisk sneaker att utöka din kollektion? <br> <br> Då kommer du inte gå fel med denna sko. Beställ de idag på MannaiArt 
+<div class="beskrivning">Car info
 
 
 
 
     <br><br><br><br>
 
-<label>Storlek  <br><br> <select>
-    <option >39</option>
-    <option >40</option>
-    <option>40.5</option>
-    <option >41</option>
-    <option >42</option>
-    <option>42.5</option>  
-    <option >43</option>
-    <option >44</option>
-    <option>44.5</option>
-    <option >45</option>
-    <option >45.5</option>
-    
+<label>Färg  <br><br> <select>
+    <option >Röd</option>
+    <option >Blå</option>
+   
 
 
 </select></label>
