--- a/article11.html
+++ b/article11.html
@@ -40,14 +40,17 @@
             <div class="title"> Car</div>
 
 
-<div class="beskrivning">Letar du efter en klassisk sneaker att utöka din kollektion? <br> <br> Då kommer du inte gå fel med denna sko. Beställ de idag på MannaiArt 
+<div class="beskrivning">Car info
 
 
 
 
     <br><br><br><br>
 
-    
+<label>Färg  <br><br> <select>
+    <option >Röd</option>
+    <option >Blå</option>
+   
 
 
 </select></label>
@@ -69,8 +72,8 @@
 
                     <div class="bilder">
 
-                        <img src="bilder/v70r1.png" style="max-width:700px">
-
+                    <div class="bilder">
+                        <img src="bilder/v70r1.png" style="width:100%">
 
                     </div>
 
