--- a/article12.html
+++ b/article12.html
@@ -29,7 +29,7 @@
 
 
 
-        <img class="logo" src="bilder/logo.png" alt="Logo" width="
+        <img class="logo" src="bilder/bilhubben.png" alt="Logo" width="
 150px">
 
 
@@ -40,13 +40,20 @@
             <div class="title"> Car</div>
 
 
-<div class="beskrivning">Beskrivning <br> <br> Price 
+<div class="beskrivning">Car info
 
 
 
 
     <br><br><br><br>
 
+<label>Färg  <br><br> <select>
+    <option >Röd</option>
+    <option >Blå</option>
+   
+
+
+</select></label>
 </div>
 
 
@@ -65,11 +72,10 @@
 
                     <div class="bilder">
 
-                        <img src="bilder/v70r1.png" style="max-width:700px">
+                    <div class="bilder">
+                        <img src="bilder/v70r1.png" style="width:100%">
 
                     </div>
-
-             
 
 
                     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
