--- a/article14.html
+++ b/article14.html
@@ -29,7 +29,7 @@
 
 
 
-        <img class="logo" src="bilder/logo.png" alt="Logo" width="
+        <img class="logo" src="bilder/bilhubben.png" alt="Logo" width="
 150px">
 
 
@@ -37,29 +37,20 @@
 
         <div class="article">
 
-            <div class="title"> Jordan 4 Bred</div>
+            <div class="title"> Car</div>
 
 
-<div class="beskrivning">Letar du efter en klassisk sneaker att utöka din kollektion? <br> <br> Då kommer du inte gå fel med denna sko. Beställ de idag på MannaiArt 
+<div class="beskrivning">Car info
 
 
 
 
     <br><br><br><br>
 
-<label>Storlek  <br><br> <select>
-    <option >39</option>
-    <option >40</option>
-    <option>40.5</option>
-    <option >41</option>
-    <option >42</option>
-    <option>42.5</option>  
-    <option >43</option>
-    <option >44</option>
-    <option>44.5</option>
-    <option >45</option>
-    <option >45.5</option>
-    
+<label>Färg  <br><br> <select>
+    <option >Röd</option>
+    <option >Blå</option>
+   
 
 
 </select></label>
@@ -81,17 +72,8 @@
 
                     <div class="bilder">
 
-                        <img src="bilder/jordan4breds.png" style="max-width:700px">
-
-                    </div>
-
                     <div class="bilder">
-                        <img src="bilder/New Project.png" style="max-width:700px">
-
-                    </div>
-
-                    <div class="bilder">
-                        <img src="bilder/bred4lol.png" style="width:100%">
+                        <img src="bilder/v70r1.png" style="width:100%">
 
                     </div>
 
