--- a/article10.html
+++ b/article10.html
@@ -58,7 +58,10 @@
     <br><br><br><br>
 
 
-    
+    <label>Färg  <br><br> <select>
+    <option >Röd</option>
+    <option >Blå</option>
+   
 
 
 </select></label>
