--- a/article11.html
+++ b/article11.html
@@ -58,7 +58,10 @@
     <br><br><br><br>
 
 
-    
+    <label>Färger  <br><br> <select>
+        <option >Röd</option>
+        <option >Blå</option>
+       
 
 
 </select></label>
