--- a/article9.html
+++ b/article9.html
@@ -59,7 +59,9 @@
 
 
     
-
+  <label>Färger  <br><br> <select>
+        <option >Röd</option>
+        <option >Blå</option>
 
 </select></label>
 
