--- a/article8.html
+++ b/article8.html
@@ -57,7 +57,9 @@
 
     <br><br><br><br>
 
-
+  <label>Färger  <br><br> <select>
+        <option >Röd</option>
+        <option >Blå</option>
     
 
 
