--- a/article9.html
+++ b/article9.html
@@ -60,8 +60,8 @@
 
     
   <label>Färger  <br><br> <select>
-        <option >Röd</option>
-        <option >Blå</option>
+        <option >Polestar Blue</option>
+        <option >Black</option>
 
 </select></label>
 
