--- a/article8.html
+++ b/article8.html
@@ -58,8 +58,8 @@
     <br><br><br><br>
 
   <label>Färger  <br><br> <select>
-        <option >Röd</option>
-        <option >Blå</option>
+        <option >Polestar Blue</option>
+        <option >Black</option>
     
 
 
